# xg

./: .env  .gitignore  clone.sh  dist.coffee  gen.coffee  package.json  pnpm-lock.yaml
apg/: Cargo.toml  README.md  clone.sh  dist.sh  patch.sh
apg/apg_proc/: Cargo.toml
apg/apg_proc/src/: lib.rs
apg/src/: lib.rs
apg/tests/: main.rs
gt/: Cargo.toml  README.md  dist.sh  patch.sh
gt/gt_proc/: Cargo.toml
gt/gt_proc/src/: lib.rs
gt/src/: lib.rs
gt/tests/: main.rs
xg/: Cargo.toml  dist.sh  patch.sh
xg/src/: lib.rs
xg/tests/: main.rs
xg/xg_proc/: Cargo.toml
xg/xg_proc/src/: lib.rs
