[package]
name = "xg_proc"
version = "0.0.8"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxai-art/xg"
repository = "https://github.com/xxai-art/xg.git"
description = "easy use prepared sql for postgresql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
pgw = "0.2.4"
proc-macro2 = "1.0.67"
regex = "1.9.5"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
trt = "0.1.5"
